Lade Overlay-Ressourcen aus dem Classpath statt aus festen Dateipfaden; verbessere Fallback für Twitch-User-ID beim Einlösen von Rewards